--- a/style.scss
+++ b/style.scss
@@ -79,7 +79,8 @@ p {
             /*MENU*/
             .nav-menu {
 
-                .burger-bouton, .burger-close {
+                .burger-bouton,
+                .burger-close {
                     display: none;
                 }
 
@@ -324,6 +325,10 @@ p {
                     background-repeat: no-repeat;
                     background-position: right 18px center;
                     background-size: 20px 20px;
+
+                    &[option]:hover {
+                        background-color: aqua;
+                    }
                 }
 
                 /*margin left auto*/
@@ -592,6 +597,8 @@ p {
                         width: 100%;
                         height: 71px;
 
+                        opacity: 0;
+
                     }
 
                     figcaption {
@@ -766,6 +773,91 @@ p {
     margin-top: -1.3em;
 }
 
-.footer-nav-widgets-wrapper{
+.footer-nav-widgets-wrapper {
     display: none !important;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.form {
+    display: flex;
+    justify-content: space-around;
+}
+
+.select-titre {
+    border: 1px solid #B8BBC2;
+    border-radius: 8px;
+    display: inline-block;
+
+    width: 260px;
+
+    padding: 16px;
+
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+
+    text-transform: uppercase;
+}
+
+
+.select {
+
+    div.selected {
+        border-radius: 8px 8px 0 0;
+        border-color: #215AFF;
+    }
+}
+
+.select-debut {
+    margin-right: 2em;
+}
+
+.select-fin {
+    margin-left: auto;
+}
+
+.select-option {
+    position: absolute;
+    z-index: 100;
+    display: none;
+
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0.5px 0.5px 15px rgba($color: gray, $alpha: 0.25);
+
+    width: 260px;
+
+    list-style: none;
+    padding: 0 16px;
+
+
+    .option {
+
+        padding: 16px;
+        margin: 0 -16px;
+
+        &:hover {
+            background-color: #E00000;
+            color: white;
+        }
+
+        &:last-child:hover {
+            border-radius: 0 0 8px 8px;
+        }
+    }
+
+
+}
+
+.mon-bouton-charger-plus{
+    width: 100%;
+
+    a.boutonAjax{
+        margin: auto;
+    }
 }
